// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my account page handles submitting the form with an error 1`] = `
<Fragment>
  <Connect(Header) />
  <CardForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    primaryButtonText={
      Array [
        "Save changes",
        "Working",
      ]
    }
    sectionName="administrator"
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </CardForm>
</Fragment>
`;

exports[`my account page handles submitting the form with no error 1`] = `
<Fragment>
  <Connect(Header) />
  <CardForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    primaryButtonText={
      Array [
        "Save changes",
        "Working",
      ]
    }
    sectionName="administrator"
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </CardForm>
</Fragment>
`;

exports[`my account page renders 1`] = `
<Fragment>
  <Connect(Header) />
  <CardForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    primaryButtonText={
      Array [
        "Save changes",
        "Working",
      ]
    }
    sectionName="administrator"
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </CardForm>
</Fragment>
`;

exports[`my account page renders 2`] = `
<Fragment>
  <Connect(Header) />
  <CardForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    primaryButtonText={
      Array [
        "Save changes",
        "Working",
      ]
    }
    sectionName="administrator"
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Window Washer"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </CardForm>
</Fragment>
`;
